# virtualROSStingrayRobot

./: README.md  cribnotes.md  scrum.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: stingray_hw_control.pc  virtualStingray_description.pc
devel/lib/stingray_hw_control/: stingray_hw_control_node
devel/share/stingray_hw_control/cmake/: stingray_hw_controlConfig.cmake
devel/share/virtualStingray_description/cmake/: virtualStingray_descriptionConfig.cmake
src/stingray_hw_control/: CMakeLists.txt  package.xml
src/stingray_hw_control/config/: config.yaml
src/stingray_hw_control/include/: stingray_hw_interface.h  wave.h
src/stingray_hw_control/launch/: stingray_hw_control.launch  test_trajectory.launch
src/stingray_hw_control/src/: .stingray_hw_interface.cpp.swp  .wave.cpp.swp  main.cpp  robot_fin_controller.h  robot_fin_state.cpp  robot_fin_state.h  stingray_hw_control.cpp  stingray_hw_interface.cpp  stingray_hw_interface.h  wave.cpp  wave.h
src/virtualStingray_description/: CMakeLists.txt  package.xml
src/virtualStingray_description/launch/: display.launch
src/virtualStingray_description/meshes/: LargeLink.stl  RayNODEF.stl  baseLink.stl  bolt.stl  smallLink.stl
src/virtualStingray_description/urdf/: robot_simplified.urdf
urdf/: testing_link.urdf
